--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bootstrap": "^4.6.0",
     "clipboard": "^2.0.8",
     "jquery": "^3.6.0",
-    "toastr": "^2.1.4"
+    "toastr": "^2.1.4",
+    "xmldom": "^0.5.0"
   },
   "repository": {
     "type": "git",
