--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "key-generator",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "build-win64": "electron-builder build --win --x64",
     "build-lnx": "electron-builder build --linux deb"
   },
   "keywords": [],
-  "author": "Reza Akbar",
+  "author": "rzak23",
   "email": "reza.akbar2396@gmail.com",
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^12.0.1",
+    "electron": "^12.0.4",
     "electron-builder": "^22.10.5"
   },
   "dependencies": {
