--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "email": "reza.akbar2396@gmail.com"
   },
   "homepage": "https://github.com/rzak23/key-generator#readme",
-  "description": ""
+  "description": "Aplikasi pembuat kunci dengan kombinasi alpha-numeric acak"
 }
