--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "key-generator",
   "version": "1.2.4",
+  "tag_name": "v1.2.4",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -12,7 +13,7 @@
   "email": "reza.akbar2396@gmail.com",
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^12.0.5",
+    "electron": "^12.0.6",
     "electron-builder": "^22.10.5"
   },
   "dependencies": {
