--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "key-generator",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -22,6 +22,7 @@
     "bootstrap": "^5.0.1",
     "clipboard": "^2.0.8",
     "jquery": "^3.6.0",
+    "normalize-url": "^6.0.1",
     "toastr": "^2.1.4",
     "xmldom": "^0.5.0"
   },
