--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^13.1.0",
-    "electron-builder": "^22.10.5"
+    "electron": "^13.2.3",
+    "electron-builder": "^22.11.7"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.1.0",
     "clipboard": "^2.0.8",
     "jquery": "^3.6.0",
     "normalize-url": "^6.0.1",
-    "toastr": "^2.1.4",
-    "xmldom": "^0.5.0"
+    "toastr": "^2.1.4"
   },
   "repository": {
     "type": "git",
