--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@xmldom/xmldom": "^0.7.3",
     "bootstrap": "^5.1.0",
     "clipboard": "^2.0.8",
     "jquery": "^3.6.0",
-    "normalize-url": "^6.0.1",
+    "normalize-url": "^6.1.0",
     "toastr": "^2.1.4"
   },
   "repository": {
